# textguard

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  WORKLOG.md  pyproject.toml  textguard-conversation.md
.github/workflows/: ci.yml  publish.yml
docs/: AUDIT-supply-chain.md  DEV.md  IMPLEMENTATION.md  PLAN.md  PUBLISH.md
scripts/: README.md  generate_unicode_data.py
src/textguard/: __init__.py  clean.py  cli.py  config.py  decode.py  normalize.py  scan.py  types.py
src/textguard/backends/: __init__.py  promptguard.py  yara_backend.py
src/textguard/data/: allowed_signers  confusables.json  confusables_full.json  scripts.json
src/textguard/data/rules/: autonomy_abuse.yara  capability_inflation.yara  code_execution.yara  command_injection.yara  credential_harvesting.yara  data_exfiltration.yara  masquerading_authority.yara  prompt_injection_direct.yara  prompt_injection_indirect.yara  prompt_injection_unicode_steganography.yara  system_manipulation.yara  tool_chaining_abuse.yara  tool_spoofing.yara
src/textguard/detect/: __init__.py  encoded.py  homoglyphs.py  invisible.py
tests/: test_api.py  test_cli.py  test_config_and_clean.py  test_decode.py  test_detectors.py  test_import_surface.py  test_normalize.py  test_promptguard_backend.py  test_types.py  test_yara_backend.py
